--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1> Hola Mundo</h1>
+<div class="row container mt-4">
+    
+
+    <div class="col">
+        <router-outlet></router-outlet>
+    </div>
+
+</div>
