--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -23,14 +23,16 @@
     No se encontró nada con el término: &nbsp;  *{{termino}}*
 </div>
 
-<div class="row">
+<div class="row" *ngIf="!hayError">
     <div class="col">
         <table class="table table-hover">
             <thead>
                 <tr>
                     <th>#</th>
                     <th>Bandera</th>
+                    <th>Nombre Codigo</th>
                     <th>Nombre</th>
+                    <th>Nombre Oficial</th>
                     <th>Población</th>
                     
                     <th></th>
@@ -38,14 +40,19 @@
             </thead>
 
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Bandera</td>
-                    <td>Nombre</td>
-                    <td>123544</td>
+                <tr *ngFor="let pais of paises; let i = index">
+                    <td>{{i + 1}}</td>
+                    <td>
+                        <img src="" alt="" class="small-flag" [src]="pais.flags.svg">
+                    </td>
+                    <!-- objeto.nombre.common //SE CAMBIO LA INTERFAZ POR LA VERSION DE API(3.1) Y EL DEPRECADO DE .SUBSCRIBE DE RXJS  -->
+                    <td>{{pais.ccn3}}</td>
+                    <td>{{pais.name.common}}</td> 
+                    <td>{{pais.name.official}}</td>
+                    <td>{{pais.population | number}}</td>
                     
                     <td>
-                        <a href="pais/cri"> Ver... </a>
+                        <a [routerLink]="['/pais', pais.ccn3]" routerLinkActive="router-link-active"  > Ver... </a>
                     </td>
                 </tr>
             </tbody>
