--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,3 +1,24 @@
 <h2>Por Capital</h2>
 <hr>
-<app-pais-tabla></app-pais-tabla>
+
+<div class="row">
+    <div class="col">
+        <app-pais-input
+        (onEnter)="buscar( $event )"
+        ></app-pais-input>
+    </div>
+</div>
+
+<hr>
+
+<div
+    *ngIf="hayError"
+    class="alert alert-danger">
+    No se encontró nada con el término: &nbsp;  *{{termino}}*
+</div>
+
+<div class="row" *ngIf="paises.length > 0">
+    <div class="col">
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+</div>
