--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -3,29 +3,29 @@
         <tr>
             <th>#</th>
             <th>Bandera</th>
-            <!-- <th>Nombre Codigo</th> -->
             <th>Nombre</th>
+            <th>Capital</th>
+            <th>Idioma</th>
             <th>Población</th>
-            <th>Nombre Oficial</th>
-            
-            <th></th>
-        </tr>
+                <th></th>
+            </tr>
     </thead>
 
     <tbody>
         <tr *ngFor="let pais of paises; let i = index">
             <td>{{i + 1}}</td>
             <td>
-                <img src="" alt="" class="small-flag" [src]="pais.flags.svg">
+                <img src="" alt="" class="small-flag" [src]="pais.flag">
             </td>
             <!-- objeto.nombre.common //SE CAMBIO LA INTERFAZ POR LA VERSION DE API(3.1) Y EL DEPRECADO DE .SUBSCRIBE DE RXJS  -->
-            <!-- <td>{{pais.ccn3}}</td> -->
-            <td>{{pais.name.common}}</td> 
-            <td>{{pais.population | number}}</td>
-            <td>{{pais.name.official}}</td>
             
+            <td>{{pais.name}}</td> 
+            <td>{{pais.capital}}</td>
+            <td>{{pais.languages[0].name}}</td>
+            <td>{{pais.population | number}}</td>
+
             <td>
-                <a [routerLink]="['/pais', pais.ccn3]" routerLinkActive="router-link-active"  > Ver... </a>
+                <a [routerLink]="['/pais', pais.alpha2Code]" routerLinkActive="router-link-active"  > Ver... </a>
             </td>
         </tr>
     </tbody>
