--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -82,8 +82,10 @@
         <span class="badge bg-primary mr-1">{{pais.translations.hr}}</span>
         <span class="badge bg-primary mr-1">{{pais.translations.fa}}</span>
     </div>
-    <h4>Respuesya JSON</h4>
-    <pre class="mt-5">{{ pais | json }}</pre>
+    <h4 class="mt-2">Respuesta JSON</h4>
+    
+        <pre class="text-success mt-5">{{ pais | json }}</pre>
+
 </div>
 
 
