--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -12,7 +12,9 @@
     </thead>
 
     <tbody>
-        <tr *ngFor="let pais of paises; let i = index">
+        <tr *ngFor="let pais of paises; let i = index"
+        class="animate__animated animate__fadeIn animate__faster"
+        >
             <td>{{i + 1}}</td>
             <td>
                 <img src="" alt="" class="small-flag" [src]="pais.flag">
