--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,4 +1,5 @@
-<h2>Por Capital</h2>
+<div class="animate__animated animate__fadeIn animate__fast">
+    <h2>Por Capital</h2>
 <hr>
 
 <div class="row">
@@ -11,6 +12,8 @@
 </div>
 
 <hr>
+
+</div>
 
 <div
     *ngIf="hayError"
