--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,14 +1,39 @@
-<h2>Por Pais</h2>
-<hr>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h2>Por Pais</h2>
+    <hr>
 
-<div class="row">
-    <div class="col">
-        <app-pais-input
-        (onEnter)="buscar( $event )"
-        placeholder="Buscar Pais..."
-        ></app-pais-input>
+    <div class="row">
+        <div class="col">
+            <app-pais-input 
+            (onEnter)="buscar( $event )"
+            (onDebounce)="sugerencias($event)" 
+            placeholder="Buscar Pais...">
+            </app-pais-input>
+        </div>
     </div>
 </div>
+
+    <ul *ngIf="mostrarSugerencia"
+        class="list-group" >
+        
+        <li *ngFor="let pais of paisesSugeridos"
+            class="list-group-item list-group-item-action mt-1">
+            <a 
+            class="nav-link" [routerLink]="['/pais',pais.alpha2Code]">
+            {{pais.name}}
+        </a>
+        </li>
+    
+        <li class="list-group-item list-group-item-action mt-1"
+            (click)="buscarSugerido( termino )" >
+            <a class="nav-link">
+            Buscar: "{{termino}}"
+        
+        </a>
+        
+        </li>
+    </ul>
+
 
 <hr>
 
